--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,16 @@
 events {}
 
 http {
-    server {
-        listen 80;
+  server {
+    listen 80;
 
-        location / {
-            root /var/www/html;
-            index index.html;
-        }
-
-        location /api {
-            proxy_pass http://34.241.206.23:5000;
-        }
+    location / {
+      root /var/www/html;
+      index index.html;
     }
+
+    location /api/ {
+      proxy_pass http://127.0.0.1:5000;
+    }
+  }
 }
